Fixed the staffdashboard to have spacing below property stats. Also some alignment issues with content

--- a/frontend/src/styles/staffdash.css
+++ b/frontend/src/styles/staffdash.css
@@ -7,7 +7,6 @@ body {
   background: white; 
   font-family: Arial, sans-serif; 
   display: flex; flex-direction: column; 
-  min-height: 100vh; 
   overflow-y: auto;
   overflow-x: hidden; 
   min-height: 100vh !important;
@@ -87,18 +86,18 @@ body {
 .sub-title{ 
   padding-left: 91px; 
   margin-top: -35px; 
-  font-size: 13px;  
+  font-size: 13px; 
 }
 
 .contractor-sub-title {
   padding-left: 483px; 
-  margin-top: -35px; 
+  margin-top: -15px; 
   font-size: 13px; 
 }
 
 .sub-title2{ 
   padding-left: 91px; 
-  margin-top: -15px; 
+  margin-top: 25px; 
   font-size: 13px;
   margin-bottom: -5px;
 }
@@ -115,7 +114,7 @@ body {
     border-radius: 5px;
     overflow-y: auto;
     border: 1px solid #FBD402;
-    margin-top: 0px;
+    margin-top: 1px;
     width: 545px;
     max-height: 250px;
 }
@@ -130,6 +129,7 @@ body {
     margin: 0px 20px 20px 0px;
     display: inline-block;
     vertical-align: top;
+
 }
 
 .property-stats-container {
@@ -815,3 +815,7 @@ body {
     to { opacity: 1; transform: translateY(0); }
 }
 
+.page-bottom-spacer {
+    height: 15px;
+    width: 100%;
+}
